tests/snapshots/parser_error_fixtures/modules_all_files_broken__BrokenFn.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/modules_all_files_broken/BrokenFn.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/modules_all_files_broken/BrokenFn.flx:3:9
  |
2 |     pub fn greet(name: String) -> String
  |         - `greet` starts here
3 |         "Hello, " + name
  |         ^^^^^^^^^
  |         --------- This looks like the function body

Note:
  while parsing function `greet`

Help:
  Try adding `{` after the function signature.
== stdout ==
<not executed>
