tests/snapshots/parser_error_fixtures/modules_all_files_broken__BrokenMatch.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/modules_all_files_broken/BrokenMatch.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Match Arm Arrow

I was expecting `->` in this match arm, but I found a string literal.

  examples/parser_errors/modules_all_files_broken/BrokenMatch.flx:4:15
  |
4 |             0 "zero",
  |               ^^^^^^

Note:
  while parsing `match` expression

Help:
  Write match arms as `match x { pattern -> body, ... }`.
== stdout ==
<not executed>
